# TestDM

./: .gitignore  CLAUDE.md  ROADMAP.md  package-lock.json  package.json  pnpm-lock.yaml  railway.json  setter-ai-business-plan.md  setter-ai-partnership-draft.md
data-seed/: db.json  knowledge-base.json
scripts/: backfill-embeddings.js  migrate-json-to-pg.js
src/: ai.js  auth.js  billing.js  config.js  db-json.js  db.js  embeddings.js  golden.js  grader.js  index.js  instagram.js  outcomes.js  qa.js  sequence.js
test_new_ai_agent/: vercel.json  (+1 more)
test_new_ai_agent/ai-microservice/: .env  Dockerfile  MOCK_DATA_TESTS.md  README.md  main.py  pyproject.toml  requirements.txt  schemas.py
test_new_ai_agent/ai-microservice/agents/: dm_agent.py  gender_agent.py  training_agent.py
test_new_ai_agent/ai-microservice/instagram_dm_ai_service.egg-info/: SOURCES.txt  requires.txt
test_new_ai_agent/ai-microservice/rag/: markdown_retriever.py
test_new_ai_agent/ai-microservice/repositories/: document_repository.py  training_repository.py
test_new_ai_agent/ai-microservice/routes/: clients.py  dm.py  documents.py  health.py  training.py
test_new_ai_agent/ai-microservice/scripts/: cleanup_mock_data.py  seed_mock_data.py  test.md
test_new_ai_agent/ai-microservice/services/: dm_service.py  document_service.py  openrouter_client.py  pricing_service.py  training_service.py  vector_store_service.py
test_new_ai_agent/ai-microservice/tests/: __init__.py  test_markdown_parser.py  test_retrieval.py
test_new_ai_agent/ai-microservice/utils/: __init__.py  markdown_parser.py
(+26 files in other folders)
